resources/bases/spawner-resources/spawner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spawner
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deployment: spawner
